[gd_scene load_steps=8 format=1]

[ext_resource path="res://scripts/ship.gd" type="Script" id=1]
[ext_resource path="res://scenes/ship_canon.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/skins/blue_skin.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/bullet_spawner.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 35.0143

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 47.0

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 33.0606

[node name="ship" type="RigidBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.9
gravity_scale = 0.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 1 )
player = 1

[node name="cooldown" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="hull_collision" type="CollisionShape2D" parent="."]

visibility/visible = false
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="player_name" type="Label" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 52.0
margin/top = 39.0
margin/right = 12.0
margin/bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "/"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="canons" type="Node2D" parent="."]

transform/scale = Vector2( 0.5, 0.5 )

[node name="canon_up" parent="canons" instance=ExtResource( 2 )]

[node name="canon_down" parent="canons" instance=ExtResource( 2 )]

transform/rot = 180.0

[node name="canon_left" parent="canons" instance=ExtResource( 2 )]

transform/rot = 90.0

[node name="canon_right" parent="canons" instance=ExtResource( 2 )]

transform/rot = 270.0

[node name="shield" type="Area2D" parent="."]

visibility/visible = false
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 2
collision/mask = 2

[node name="shield_collision" type="CollisionShape2D" parent="shield"]

shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="hitbox" type="Area2D" parent="."]

visibility/visible = false
input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 2
collision/mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]

shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="skin" parent="." instance=ExtResource( 3 )]

[node name="bullet_spawner" parent="." instance=ExtResource( 4 )]

[connection signal="timeout" from="cooldown" to="." method="_on_cooldown_timeout"]

[connection signal="body_enter" from="shield" to="." method="_on_shield_body_enter"]

[connection signal="body_enter" from="hitbox" to="." method="_on_hitbox_body_enter"]


